test container creation

--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -1,20 +1,29 @@
-name: test-build
+name: Build and Test
 
 on:
-  pull_request:
-    branches: [main, development]
-  workflow_dispatch:
+  push:
+    branches:
+      - main
+      - development
 
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [18.x]
+
     steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js
-        uses: actions/setup-node@v1
-        with:
-          node-version: "18.x"
-      - name: Install packages
-        run: npm install
-      - name: Build website
-        run: npm run build
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+
+    - name: Install Dependencies
+      run: npm install
+
+    - name: Build Project
+      run: npm run build
