--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - development
 
 jobs:
   build-and-push:
@@ -17,13 +18,24 @@ jobs:
       uses: docker/setup-buildx-action@v2
 
     - name: Log in to GitHub Container Registry
+      if: github.ref == 'refs/heads/main'
       uses: docker/login-action@v2
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
+    - name: Build Docker Image
+      uses: docker/build-push-action@v3
+      with:
+        context: .
+        file: ./Dockerfile
+        push: false
+        tags: ghcr.io/phybyte/mx-guides:latest
+      if: github.ref == 'refs/heads/development'
+
     - name: Build and Push Docker Image
+      if: github.ref == 'refs/heads/main'
       uses: docker/build-push-action@v3
       with:
         context: .
