--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -17,6 +17,14 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
+    - name: Build Docker Image
+      uses: docker/build-push-action@v3
+      with:
+        context: .
+        file: ./Dockerfile
+        tags: ghcr.io/phybyte/mx-guides:latest
+        load: true  # Ensures image is loaded into Docker after build for dev
+
     - name: Log in to GitHub Container Registry
       if: github.ref == 'refs/heads/main'
       uses: docker/login-action@v2
@@ -25,20 +33,11 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Build Docker Image
-      uses: docker/build-push-action@v3
-      with:
-        context: .
-        file: ./Dockerfile
-        push: false
-        tags: ghcr.io/phybyte/mx-guides:latest
-      if: github.ref == 'refs/heads/development'
-
-    - name: Build and Push Docker Image
+    - name: Push Docker Image
       if: github.ref == 'refs/heads/main'
       uses: docker/build-push-action@v3
       with:
         context: .
         file: ./Dockerfile
-        push: true
         tags: ghcr.io/phybyte/mx-guides:latest
+        push: true
