--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -14,30 +14,24 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
-    - name: Build Docker Image
-      uses: docker/build-push-action@v3
-      with:
-        context: .
-        file: ./Dockerfile
-        tags: ghcr.io/phybyte/mx-guides:latest
-        load: true  # Ensures image is loaded into Docker after build for dev
-
     - name: Log in to GitHub Container Registry
-      if: github.ref == 'refs/heads/main'
       uses: docker/login-action@v2
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Push Docker Image
-      if: github.ref == 'refs/heads/main'
+    - name: Build and Push Docker Image
       uses: docker/build-push-action@v3
       with:
         context: .
         file: ./Dockerfile
+        platforms: linux/amd64,linux/arm64
         tags: ghcr.io/cryptobayspace/mx-guides:latest
-        push: true
+        push: ${{ github.ref == 'refs/heads/main' }}
